--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "acentos-api",
   "version": "0.0.1",
   "description": "API del backend del sistema acentos, basado en Express y Postgres",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
+    "start": "nodemon src/api/index-api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +24,11 @@
   },
   "homepage": "https://github.com/JesusEPG/acentos-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.3.0",
     "swagger-ui-express": "^4.1.4"
   }
 }
